--- a/FrameworkSeleniumCsharp/packages.config
+++ b/FrameworkSeleniumCsharp/packages.config
@@ -11,4 +11,5 @@
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.11.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.11.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.37.0" targetFramework="net461" />
 </packages>
