V1Framework using onlinehr.biz as an example

--- a/FrameworkSeleniumCsharp/FrameworkSeleniumCsharp.csproj
+++ b/FrameworkSeleniumCsharp/FrameworkSeleniumCsharp.csproj
@@ -54,8 +54,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WebTests.cs" />
+    <Compile Include="Pages\Base.cs" />
+    <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\HomePage.cs" />
+    <Compile Include="Pages\LoginPage.cs" />
+    <Compile Include="Scenarios\LoginScenario.cs" />
+    <Compile Include="Scenarios\DashBoardScenario.cs" />
+    <Compile Include="Scenarios\LogOutScenario.cs" />
+    <Compile Include="Tests\CriticalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\SmokeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
